--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "type": "mercurial",
         "url": "https://bitbucket.org/xowl/xowl-vscode"
     },
-    "license": "LGPLv3",
+    "license": "LGPL-3.0+",
     "engines": {
         "vscode": "^1.14.0"
     },
@@ -24,23 +24,23 @@
         "semantic"
     ],
     "activationEvents": [
-        "onLanguage:xowl-rdf-nt"
+        "onLanguage:xowlrdfnt"
     ],
     "files": [],
     "contributes": {
         "languages": [
             {
-                "id": "xowl-rdf-nt",
+                "id": "xowlrdfnt",
                 "aliases": [],
                 "extensions": [
                     ".nt"
                 ],
-                "configuration": "./languages/rdf-nt.json"
+                "configuration": "./languages/rdf-nt-language-configuration.json"
             }
         ],
         "grammars": [
             {
-                "language": "xowl-rdf-nt",
+                "language": "xowlrdfnt",
                 "scopeName": "source.xowl-rdf-nt",
                 "path": "./languages/rdf-nt.tmLanguage.json"
             }
@@ -52,11 +52,11 @@
         "postinstall": "node ./node_modules/vscode/bin/install"
     },
     "dependencies": {
-        "vscode-languageclient": "3.2.2"
+        "vscode-languageclient": "3.3.0"
     },
     "devDependencies": {
-        "typescript": "^2.4.2",
-        "vscode": "^1.1.4",
+        "typescript": "2.4.2",
+        "vscode": "1.1.4",
         "@types/node": "^6.0.40",
         "@types/es6-promise": "^0.0.32"
     }
