--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,14 +1,9 @@
 {
-    "version": "2.0.0",
-    "tasks": [
-        {
-            "identifier": "tsc",
-            "type": "typescript",
-            "tsconfig": "tsconfig.json",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            }
-        }
-    ]
+    "version": "0.1.0",
+    "command": "npm",
+    "isShellCommand": true,
+    "showOutput": "silent",
+    "args": ["run", "compile", "--loglevel", "silent"],
+    "isBackground": true,
+    "problemMatcher": "$tsc-watch"
 }
