--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "activationEvents": [
         "onLanguage:xowlrdfnt"
     ],
+    "main": "./target/src/Main",
     "files": [],
     "contributes": {
         "languages": [
