[fix] Added author information to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "icon": "xowl.png",
     "version": "0.1.0",
     "commit": "",
+    "author": "Assocation Cénotélie",
     "publisher": "cenotelie",
     "repository": {
         "type": "mercurial",
